--- a/seminar.html
+++ b/seminar.html
@@ -79,6 +79,22 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Saturday, 27 January 2018, 14:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1dMlel4">Toward Multimodal Image-to-Image Translation</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 27 January 2018, 14:00 </p></td>
+                                <td><small>Chen Gao(高晨) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1snbp8G9">Deformable GANs for Pose-based Human Image Generation</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 27 January 2018, 14:00 </p></td>
+                                <td><small>Shaofei Huang(黄少飞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1bqglAkJ">Semi-supervised FusedGAN for Conditional Image Generation</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 27 January 2018, 14:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1ggdvA2f">颜水成：像素级标注数据集将引领计算机视觉下一个时代 </a></i></td> </tr>
+                                <tr>
                                 <td><p> Wednesday, 24 January 2018, 19:00 </p></td>
                                 <td><small>Xiaofan Cai(蔡晓帆) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1eaxVyu">Amazon Go </a></i></td> </tr>
