--- a/publication.html
+++ b/publication.html
@@ -77,6 +77,7 @@ var _hmt = _hmt || [];
 
  <p>------------------------ Conference Papers ------------------------</p>
 <p> 1. Si Liu, Yao Sun, Defa Zhu, Guanghui Ren, Yu Chen, Jiashi Feng, and Jizhong Han, Cross-domain Human Parsing via Adversarial Feature and Label Adaptation, AAAI 2018[<a href="pdf/17058-72879-2-SM.pdf">Full paper</a>]</p>
+<p> 2. Zhen Wei, Yao Sun, Junyu Lin, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, Computational Visual Media 2018[<a href="pdf/CVM camera-ready.pdf">Full paper</a>]</p>
                              </div>
                               <div class="clear"></div>
                             </div>
