--- a/seminar.html
+++ b/seminar.html
@@ -79,6 +79,22 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Wednesday, 31 January 2018, 19:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1bqmXnR5">StuffNet: Using ‘Stuff’ to Improve Object Detection</a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 31 January 2018, 19:00 </p></td>
+                                <td><small>Han Yu(庾涵) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1mjVumBu">1.What Makes Good Synthetic Training Data for Learning Disparity and Optical Flow Estimation? <br> 2.VR介绍</a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 31 January 2018, 19:00 </p></td>
+                                <td><small>Lejian Ren(任乐健) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1ggj1st1">Learning Face Age Progression: A Pyramid Architecture of GANs</a></i></td> </tr>
+                                <tr>
+                                <td><p> Wednesday, 31 January 2018, 19:00 </p></td>
+                                <td><small>Ruihe Qian(钱瑞和) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1nwoEIPN">Unsupervised Visual Attribute Transfer with Reconfigurable Generative Adversarial Networks</a></i></td> </tr>
+                                <tr>
                                 <td><p> Saturday, 27 January 2018, 14:00 </p></td>
                                 <td><small>Xiaofan Cai(蔡晓帆) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1dMlel4">Toward Multimodal Image-to-Image Translation</a></i></td> </tr>
