--- a/seminar.html
+++ b/seminar.html
@@ -79,6 +79,26 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Saturday, 3 February 2018, 14:00 </p></td>
+                                <td><small>Chen Gao(高晨) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1snmfgXB">Bottom-Up and Top-Down Attention for Image Captioning and Visual Question Answering</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 3 February 2018, 14:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1sm0cbkp">Inferring Semantic Layout for Hierarchical Text-to-Image Synthesis</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 3 February 2018, 14:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1jJX0rHG">Semantic-aware Grad-GAN for Virtual-to-Real Urban Scene Adaption</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 3 February 2018, 14:00 </p></td>
+                                <td><small>Yue Liao(廖越) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1bqOlhs7">Pixels to Graphs by Associative Embedding</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 3 February 2018, 14:00 </p></td>
+                                <td><small>Defa Zhu(朱德发) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1dGpBiXN">Decoupled Learning for Conditional Adversarial Networks</a></i></td> </tr>
+                                <tr>
                                 <td><p> Wednesday, 31 January 2018, 19:00 </p></td>
                                 <td><small>Xiaofan Cai(蔡晓帆) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1bqmXnR5">StuffNet: Using ‘Stuff’ to Improve Object Detection</a></i></td> </tr>
