--- a/life.html
+++ b/life.html
@@ -84,6 +84,7 @@ var _hmt = _hmt || [];
                               <div class="wrapper">
    
   <table border="2" class="table-img" > 
+   <!--因为不可抗力原因注释掉了。
   <tbody>
     <tr>
       <td> <img width="740" src="images/life/201708huangshan2.png"/> </td>
@@ -122,8 +123,7 @@ var _hmt = _hmt || [];
       <td> <p>2016年CCF比赛获奖，大家受邀在摄影棚拍宣传video</p></td>
     </tr>
   </tbody>
-
-
+  -->
 
 </table>
 
