--- a/seminar.html
+++ b/seminar.html
@@ -79,6 +79,22 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Saturday, 3 March 2018, 14:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1QDmRjhIwkNXk6Nl6Wo63bw">Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 3 March 2018, 14:00 </p></td>
+                                <td><small>Shaofei Huang(黄少飞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1taoSR4OTck_LWR1gHnk-nw">Fluorescence microscopy image segmentation using convolutional neural network with generative adversarial networks</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 3 March 2018, 14:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1mtglHeGw4W1Zd9ZWy7pYug">An Iterative Spanning Forest Framework for Superpixel Segmentation</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 3 March 2018, 14:00 </p></td>
+                                <td><small>Chen Gao(高晨) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1Vp7TVshTtc4mB6LR9tP_aw">DEEP LOGISMOS: DEEP LEARNING GRAPH-BASED 3D SEGMENTATION OF PANCREATIC TUMORS ON CT SCANS</a></i></td> </tr>
+                                <tr>
                                 <td><p> Saturday, 3 February 2018, 14:00 </p></td>
                                 <td><small>Chen Gao(高晨) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1snmfgXB">Bottom-Up and Top-Down Attention for Image Captioning and Visual Question Answering</a></i></td> </tr>
