--- a/seminar.html
+++ b/seminar.html
@@ -79,6 +79,34 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Saturday, 11 March 2018, 14:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1CL0ql-w2Ga-YoJkaqOS_gw">SpaceX</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 11 March 2018, 14:00 </p></td>
+                                <td><small>SanBi Luo(罗三笔) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1n5IwkGmpm7nuzI0CzvK_Tg">抖音</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 11 March 2018, 14:00 </p></td>
+                                <td><small>Guanghui Ren(任广辉) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1pxdozsenpiM4J4T_-JKarA">Semantic Object Parsing with Graph LSTM</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 11 March 2018, 14:00 </p></td>
+                                <td><small>Guanghui Ren(任广辉) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1pxdozsenpiM4J4T_-JKarA">Semantic Object Parsing with Graph LSTM</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 11 March 2018, 14:00 </p></td>
+                                <td><small>Ruihe Qian(钱瑞和) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1tyeoKaFNejPOgWIl25jG2A">DA-GAN</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 11 March 2018, 14:00 </p></td>
+                                <td><small>Defa Zhu(朱德发) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1KgrhWjs5zU-hLMzKooizow">cGANs with Projection Discriminator</a></i></td> </tr>
+                                <tr>
+                                <td><p> Saturday, 11 March 2018, 14:00 </p></td>
+                                <td><small>Yue Liao(廖越) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1tTRUC23bW394myWOZURBlg">Scene Graph Generation by Iterative Message Passing</a></i></td> </tr>
+                                <tr>
                                 <td><p> Saturday, 3 March 2018, 14:00 </p></td>
                                 <td><small>Xiaofan Cai(蔡晓帆) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1QDmRjhIwkNXk6Nl6Wo63bw">Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</a></i></td> </tr>
