--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,26 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Wednesday, 14 March 2018, 19:00 </p></td>
+                                <td><small>WeiBo Zhang(张卫博) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/11eoI8ecJYMC1h-MiljVd3A">扫地机器人</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 14 March 2018, 19:00 </p></td>
+                                <td><small>Guanghui Ren(任广辉) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1P3pk981AA4-TvqcoNquXxg">1. Path Aggregation Network for Instance Segmentation br>2. Relation Networks for Object Detection</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 14 March 2018, 19:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/14c7zJzslDMpAYOzQnEc3yA">Progressive Cognitive Human Parsing</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 14 March 2018, 19:00 </p></td>
+                                <td><small>Renda Bao(包仁达) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1f1IiwOOCft5lcvMlVaTkaw">Face Mask Extraction in Video Sequence</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 14 March 2018, 19:00 </p></td>
+                                <td><small>Fan Tang(唐凡) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/15A25Kt_2EoXogzUDBPiX_Q">智能养猪</a></i></td> </tr>
+                                <tr>
                                 <td><p> Saturday, 11 March 2018, 14:00 </p></td>
                                 <td><small>Xiaofan Cai(蔡晓帆) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1CL0ql-w2Ga-YoJkaqOS_gw">SpaceX</a></i></td> </tr>
