--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,14 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Saturday, 17 March 2018, 14:00 </p></td>
+                                <td><small>Shaofei Huang(黄少飞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1VJuKWHnJ48n4JJGU-EsVKw">1.mobile real-time video segmentation<br>2.RTSEG:real-time semantic segmentation comparative study</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 17 March 2018, 14:00 </p></td>
+                                <td><small>Lejian Ren(任乐健) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1sfVW2obN0dPym07eSAu38Q">Visual Translation Embedding Network for Visual Relation Detection</a></i></td></tr>
+                                <tr>
                                 <td><p> Wednesday, 14 March 2018, 19:00 </p></td>
                                 <td><small>WeiBo Zhang(张卫博) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/11eoI8ecJYMC1h-MiljVd3A">扫地机器人</a></i></td></tr>
