--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,26 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Wednesday, 28 March 2018, 19:00 </p></td>
+                                <td><small>WeiBo Zhang(张卫博) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1NUEh91eOoIep23wc0ZiD-A">了解火币网</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 28 March 2018, 19:00 </p></td>
+                                <td><small>Lejian Ren(任乐健) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1KFlA76w7z8YLV_0m7nxH1g">Stereoscopic Neural Style Transfer</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 28 March 2018, 19:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1gJsrOTUH78tHelrkmdFn1w">PersonLab: Person Pose Estimation and Instance Segmentation with a Bottom-Up, Part-Based, Geometric Embedding Model</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 28 March 2018, 19:00 </p></td>
+                                <td><small>Shaofei Huang(黄少飞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/13A4nSrS2iHapssEZ9s7r1A">生成对抗网络评价标准</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 17 March 2018, 14:00 </p></td>
+                                <td><small>Shaofei Huang(黄少飞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1VJuKWHnJ48n4JJGU-EsVKw">1.mobile real-time video segmentation<br>2.RTSEG:real-time semantic segmentation comparative study</a></i></td></tr>
+                                <tr>
                                 <td><p> Saturday, 17 March 2018, 14:00 </p></td>
                                 <td><small>Shaofei Huang(黄少飞) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1VJuKWHnJ48n4JJGU-EsVKw">1.mobile real-time video segmentation<br>2.RTSEG:real-time semantic segmentation comparative study</a></i></td></tr>
