--- a/seminar.html
+++ b/seminar.html
@@ -78,7 +78,19 @@ var _hmt = _hmt || [];
                                   <td><strong>Speakers</strong></td>
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
-                                <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Lejian Ren(任乐健) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
+                                <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
+                                <tr>
+                                <td><p> Saturday, 31 March 2018, 14:00 </p></td>
+                                <td><small>Chen Gao(高晨) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1heNLfdnVoG-B_ikEFzQmSw">Context Encoding for Semantic Segmentation</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 31 March 2018, 14:00 </p></td>
+                                <td><small>Guanghui Ren(任广辉) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1M6b2xlxufRTIM5U579IMOg">1.Deep Feature Flow for Video Recognition<br>2.Flow-Guided Feature Aggregation for Video Object Detection</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 31 March 2018, 14:00 </p></td>
+                                <td><small>Lejian Ren(任乐健) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1J2BvcbTpY7A2BZLqx2KozQ">Generating Triples with Adversarial Networks for Scene Graph Construction</a></i></td></tr>
                                 <tr>
                                 <td><p> Wednesday, 28 March 2018, 19:00 </p></td>
                                 <td><small>WeiBo Zhang(张卫博) </small></td>
@@ -95,10 +107,6 @@ var _hmt = _hmt || [];
                                 <td><p> Wednesday, 28 March 2018, 19:00 </p></td>
                                 <td><small>Shaofei Huang(黄少飞) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/13A4nSrS2iHapssEZ9s7r1A">生成对抗网络评价标准</a></i></td></tr>
-                                <tr>
-                                <td><p> Saturday, 17 March 2018, 14:00 </p></td>
-                                <td><small>Shaofei Huang(黄少飞) </small></td>
-                                <td><i><a href="https://pan.baidu.com/s/1VJuKWHnJ48n4JJGU-EsVKw">1.mobile real-time video segmentation<br>2.RTSEG:real-time semantic segmentation comparative study</a></i></td></tr>
                                 <tr>
                                 <td><p> Saturday, 17 March 2018, 14:00 </p></td>
                                 <td><small>Shaofei Huang(黄少飞) </small></td>
