--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,22 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Wednesday, 4 April 2018, 19:00 </p></td>
+                                <td><small>Fan Tang(唐凡) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1rPwZMAv9dE0dq_Is-kTwqg">uber无人驾驶事件</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 4 April 2018, 19:00 </p></td>
+                                <td><small>Shaofei Huang(黄少飞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1mdnQZGqqZRQJ3NeA8xOWag">本征图像</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 4 April 2018, 19:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/15BVtv-c1vp6eoSrvHvMU1A">Learning Spatiotemporal Features with 3D Convolutional Networks</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 4 April 2018, 19:00 </p></td>
+                                <td><small>Renda Bao(包仁达) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/18bYoEAa7yNdqYGb0zdIEvg">1.Multi-Content GAN for Few-Shot Font Style Transfer<br>2.DeblurGAN Blind Motion Deblurring Using Conditional Adversarial Networks</a></i></td></tr>
+                                <tr>
                                 <td><p> Saturday, 31 March 2018, 14:00 </p></td>
                                 <td><small>Chen Gao(高晨) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1heNLfdnVoG-B_ikEFzQmSw">Context Encoding for Semantic Segmentation</a></i></td></tr>
