--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,18 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Sunday, 8 April 2018, 19:00 </p></td>
+                                <td><small>Shaofei Huang(黄少飞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/101RAEnwudHyhNzbpf1am8w">Caption 评价标准（机器翻译评价标准）</a></i></td></tr>
+                                <tr>
+                                <td><p> Sunday, 8 April 2018, 19:00 </p></td>
+                                <td><small>Lejian Ren(任乐健) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/17Htesw1ZL4NgqDIw6EWhWw">Neural Motifs: Scene Graph Parsing with Global Context</a></i></td></tr>
+                                <tr>
+                                <td><p> Sunday, 8 April 2018, 19:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1prdEpEVXUT3-JqjG-wYPBA">Disentangled Person Image Generation</a></i></td></tr>
+                                <tr>
                                 <td><p> Wednesday, 4 April 2018, 19:00 </p></td>
                                 <td><small>Fan Tang(唐凡) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1rPwZMAv9dE0dq_Is-kTwqg">uber无人驾驶事件</a></i></td></tr>
