--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,22 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Wednesday, 11 April 2018, 19:00 </p></td>
+                                <td><small>Weibo Zhang(张卫博) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1agpdd0XpmuXPNzgp3_xcgQ">深度学习助力前端</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 11 April 2018, 19:00 </p></td>
+                                <td><small>Chen Gao(高晨) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1Ljc4ZinogwJJiPdFFHgYhw">Globally and Locally Consistent Image Completion</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 11 April 2018, 19:00 </p></td>
+                                <td><small>Guanghui Ren(任广辉) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1RxbB8FwiZ-2xc_LkbfeO8w">Clockwork Convnets for Video Semantic Segmentation</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 11 April 2018, 19:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1WXfUKWwrNDfFJL2B0D4UAg">Generative Image Inpainting with Contextual Attention</a></i></td></tr>
+                                <tr>
                                 <td><p> Sunday, 8 April 2018, 19:00 </p></td>
                                 <td><small>Shaofei Huang(黄少飞) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/101RAEnwudHyhNzbpf1am8w">Caption 评价标准（机器翻译评价标准）</a></i></td></tr>
