--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,18 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Wednesday, 18 April 2018, 19:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1eGZr0T6PZsQxZL-t6KAhpg">Multi-scale Deep Learning Architectures for Person Re-identification<br>Self-Supervised Adversarial Hashing Networks for Cross-Modal Retrieval<br>Demystifying Neural Style Transfer</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 18 April 2018, 19:00 </p></td>
+                                <td><small>Yue Liao(廖越) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1xcNtb2D8zhZOU78I78fTLA">Richer Convolutional Features for Edge Detection</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 18 April 2018, 19:00 </p></td>
+                                <td><small>Ruihe Qian(钱瑞和) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1576QUR3HsEU6OaCBiPF_pg">An Analysis of Scale Invariance in Object Detection – SNIP</a></i></td></tr>
+                                <tr>
                                 <td><p> Saturday, 14 April 2018, 14:00 </p></td>
                                 <td><small>Ruihe Qian(钱瑞和) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1HTK2tvAWO-gzCRc6YYDENw">1.Video Scene Parsing with Predictive Feature Learning<br>2.Fast and Accurate Online Video Object Segmentation via Tracking Parts<br>3.Stable and Controllable Neural Texture Synthesis and Style Transfer Using Histogram Losses</a></i></td></tr>
