--- a/index.html
+++ b/index.html
@@ -140,8 +140,17 @@ var _hmt = _hmt || [];
                               <div class="wrapper">
                                 <div id="thumbs" class="navigation">
                                   <ul class="thumbs noscript">
-
-                                 <li> <a class="thumb" name="leaf" href="images/pub-big-8.png" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-8.png" width="227" height="147"/> </a>
+                                 <li> <a class="thumb" name="leaf" href="images/valse2018liu.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/valse2018.png" width="227" height="147"/> </a>
+                                    <div class="caption">
+                                      <h3> &bull; S-lab members took part in the valse 2018 conference</h3>
+                                      <h3> &bull; S-lab 成员参加valse 2018</h3>
+                                      <p>[2018-4-21]</p>
+                                      <div class="image-desc">
+                                        <p>S-lab members took part in the valse 2018 conference. Prof. Liu was selected to give a talk in Valse 2018. [<a href="https://pan.baidu.com/s/1FYznfGG914pPaU5bs0-4dw">PPT</a>]</p>
+                                        </div>
+                                    </div>
+                                  </li>
+                                 <li class="extra"> <a class="thumb" name="leaf" href="images/pub-big-8.png" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-8.png" width="227" height="147"/> </a>
                                     <div class="caption">
                                       <h3> &bull; A cross-domain adaptation paper is accepted by AAAI 2018</h3>
                                       <h3> &bull; 1篇有关跨域迁移学习的长文被AAAI 2018 接收</h3>
