--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,18 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Wednesday, 25 April 2018, 19:00 </p></td>
+                                <td><small>Guanghui Ren(任广辉) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/17A2VjNqQmzZ5s5dZBrj3Ng">1.Who Let The Dogs Out? Modeling Dog Behavior From Visual Data<br>2.endtoend flow correlation tracking with spatial-temporal Attention</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 25 April 2018, 19:00 </p></td>
+                                <td><small>Fan Tang(唐凡) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1L11MhTXQyHEO3fJlrV915g">EPIC-Kitchens</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 25 April 2018, 19:00 </p></td>
+                                <td><small>Han Yu(庾涵) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1GaMtDDrQPcE-b1qX3dMfjA">Video Based Reconstruction of 3D People Models</a></i></td></tr>
+                                <tr>
                                 <td><p> Wednesday, 18 April 2018, 19:00 </p></td>
                                 <td><small>Tianrui Hui(惠天瑞) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1eGZr0T6PZsQxZL-t6KAhpg">Multi-scale Deep Learning Architectures for Person Re-identification<br>Self-Supervised Adversarial Hashing Networks for Cross-Modal Retrieval<br>Demystifying Neural Style Transfer</a></i></td></tr>
