--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,22 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Wednesday, 2 May 2018, 19:00 </p></td>
+                                <td><small>Defa Zhu(朱德发) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1pO5maQkHT_cThyqivxGQjg">1.Arbitrary Style Transfer in Real-time with Adaptive Instance Normalization<br>2.MUNIT: Multimodal UNsupervised Image-to-image TranslationPlug & Play Generative Networks: Conditional Iterative Generation of Images in Latent Space</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 2 May 2018, 19:00 </p></td>
+                                <td><small>Lejian Ren(任乐健) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1wGfsU3I1dxUTmxw9jgXKqQ">如何做一个“实用”的图像数据集</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 2 May 2018, 19:00 </p></td>
+                                <td><small>Weibo Zhang(张卫博) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1J2t4YKCorlsBXSb24IdEdA">video++</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 2 May 2018, 19:00 </p></td>
+                                <td><small>Fan Tang(唐凡) </small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1IrL0G70L-XzWKNOYoUQuqw">小朋汽车+BAT在ai领域的战略布局</a></i></td></tr>
+                                <tr>
                                 <td><p> Wednesday, 25 April 2018, 19:00 </p></td>
                                 <td><small>Guanghui Ren(任广辉) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/17A2VjNqQmzZ5s5dZBrj3Ng">1.Who Let The Dogs Out? Modeling Dog Behavior From Visual Data<br>2.endtoend flow correlation tracking with spatial-temporal Attention</a></i></td></tr>
