--- a/publication.html
+++ b/publication.html
@@ -78,6 +78,8 @@ var _hmt = _hmt || [];
  <p>------------------------ Conference Papers ------------------------</p>
 <p> 1. Si Liu, Yao Sun, Defa Zhu, Guanghui Ren, Yu Chen, Jiashi Feng, and Jizhong Han, Cross-domain Human Parsing via Adversarial Feature and Label Adaptation, AAAI 2018[<a href="pdf/17058-72879-2-SM.pdf">Full paper</a>]</p>
 <p> 2. Zhen Wei, Yao Sun, Junyu Lin, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, Computational Visual Media 2018[<a href="pdf/CVM camera-ready.pdf">Full paper</a>]</p>
+<p> 3. Xiaobo Wang, Shifeng Zhang, Zhen Lei, Si Liu, Xiaojie Guo, Stan Z. Li,  Ensemble Soft-Margin Softmax Loss for Image Classification, IJCAI 2018[<a href="...">Full paper</a>]</p>
+<p> 4. Si Liu, Zhen Wei, Yao Sun, Xinyu Ou, Junyu Lin, Bin Liu, Ming-Hsuan Yang，Composing Semantic Collage for Image Retargeting， TIP 2018[<a href="...">Full paper</a>]</p>
                              </div>
                               <div class="clear"></div>
                             </div>
