--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,10 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
                                 <tr>
+                                <td><p> Thursday, 5 May 2018, 19:00 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1pHaDXg9IuhHizJo4051rIw">GAN-1</a></i></td></tr>
+                                <tr>
                                 <td><p> Wednesday, 2 May 2018, 19:00 </p></td>
                                 <td><small>Defa Zhu(朱德发) </small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1pO5maQkHT_cThyqivxGQjg">1.Arbitrary Style Transfer in Real-time with Adaptive Instance Normalization<br>2.MUNIT: Multimodal UNsupervised Image-to-image TranslationPlug & Play Generative Networks: Conditional Iterative Generation of Images in Latent Space</a></i></td></tr>
