--- a/seminar.html
+++ b/seminar.html
@@ -78,7 +78,35 @@ var _hmt = _hmt || [];
                                   <td><strong>Speakers</strong></td>
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
-                                <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞)-->
+                                <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞) Fan Tang(唐凡)-->
+                                <tr>
+                                <td><p> Saturday, 9 May 2018, 19:00 </p></td>
+                                <td><small>Han Yu(庾涵)</small></td>
+                                <td><i><a href="  ">颜水成——人工智能杂谈</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 9 May 2018, 19:00 </p></td>
+                                <td><small>Runhe Yang(杨润河)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1j_QB77ZAxmxmGxwUGwBcPA">吴文俊院士生平与吴文俊人工智能奖</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 9 May 2018, 19:00 </p></td>
+                                <td><small>Fan Tang(唐凡)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1g2mu3UUMMzTjKVSBjojH0A">优必选机器人</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 9 May 2018, 19:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆)</small></td>
+                                <td><i><a href="  ">Semantic Instance Segmentation with a Discriminative Loss Function</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 5 May 2018, 14:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1DzGe1_ZiWV7w71ay1y95IQ">deeplab v3+</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 5 May 2018, 14:00 </p></td>
+                                <td><small>Chen Gao(高晨)</small></td>
+                                <td><i><a href="  ">Image Inpainting for Irregular Holes Using Partial Convolutions</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 5 May 2018, 14:00 </p></td>
+                                <td><small>Ruihe Qian(钱瑞和)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1YdywG1roiUOASl3N7K9oRQ">1.Efficient Video Object Segmentation via Network Modulation<br>2.Dynamic Video Segmentation Network</a></i></td></tr>
                                 <tr>
                                 <td><p> Thursday, 5 May 2018, 19:00 </p></td>
                                 <td><small>Defa Zhu(朱德发)</small></td>
