--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,22 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞) Fan Tang(唐凡)-->
                                 <tr>
+                                <td><p> Thursday, 17 May 2018, 19:30 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1yTTFrQahqWdaAIpdzdLQtw">GAN-2</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 16 May 2018, 19:00 </p></td>
+                                <td><small>Weibo Zhang(张卫博)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1rlqtGTvmCKCkhpPJ2uiLsg">华大基因库</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 16 May 2018, 19:00 </p></td>
+                                <td><small>Fan Tang(唐凡)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1_hqmxFMZslRsny5wjTdl9w">google I/O 2018</a></i></td></tr>
+                                <tr>
+                                <td><p> Sunday, 13 May 2018, 19:30 </p></td>
+                                <td><small>Ruihe Qian(钱瑞和)</small></td>
+                                <td><i><a href="  ">1.MoNet: Deep Motion Exploitation for Video Object Segmentation<br>2.Human Pose Estimation with Parsing Induced Learner</a></i></td></tr>
+                                <tr>
                                 <td><p> Saturday, 9 May 2018, 19:00 </p></td>
                                 <td><small>Han Yu(庾涵)</small></td>
                                 <td><i><a href="  ">颜水成——人工智能杂谈</a></i></td></tr>
@@ -94,7 +110,7 @@ var _hmt = _hmt || [];
                                 <tr>
                                 <td><p> Saturday, 9 May 2018, 19:00 </p></td>
                                 <td><small>Xiaofan Cai(蔡晓帆)</small></td>
-                                <td><i><a href="  ">Semantic Instance Segmentation with a Discriminative Loss Function</a></i></td></tr>
+                                <td><i><a href="https://pan.baidu.com/s/1-O8QXH1S67VVlxxY-OH_5A">Semantic Instance Segmentation with a Discriminative Loss Function</a></i></td></tr>
                                 <tr>
                                 <td><p> Saturday, 5 May 2018, 14:00 </p></td>
                                 <td><small>Tianrui Hui(惠天瑞)</small></td>
