--- a/seminar.html
+++ b/seminar.html
@@ -80,9 +80,37 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞) Fan Tang(唐凡)-->
                                 <tr>
+                                <td><p> Sunday, 27 May 2018, 19:00 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1rZrAvtjHHLH-mRQ9EtAB_Q">1.PGPose<br>2.Deep Video Portraits</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 26 May 2018, 14:00 </p></td>
+                                <td><small>Ruihe Qian(钱瑞和)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1lxKhx2Vn18EPxqSbxnvQLA">1.Data Augmentation Generative Adversarial Networks openreview<br>2.Event-based vision enhanced: A joint framework for vehicle detection</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 26 May 2018, 14:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1ouQCsF-GtBONDNsb4LE5fQ">智能手机的主动感知</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 26 May 2018, 14:00 </p></td>
+                                <td><small>Fan Tang(唐凡)</small></td>
+                                <td><i><a href="  ">element AI</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 23 May 2018, 19:00 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1ouQCsF-GtBONDNsb4LE5fQ">deepfashion database</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 23 May 2018, 19:00 </p></td>
+                                <td><small>Renda Bao(包仁达)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1Ob70pt2BQEL-xYJwPFcuew">京东的科技赋能时尚发展之路</a></i></td></tr>
+                                <tr>
+                                <td><p> Tuesday, 22 May 2018, 19:00 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1SXSIWpn23vM7AoITKu1-QQ">1.Semi-parametric Image Synthesis<br>2.tranfering GAN<br>3.Two-Stream Convolutional Networks for Dynamic Texture Synthesis</a></i></td></tr>
+                                <tr>
                                 <td><p> Thursday, 17 May 2018, 19:30 </p></td>
                                 <td><small>Defa Zhu(朱德发)</small></td>
-                                <td><i><a href="https://pan.baidu.com/s/1yTTFrQahqWdaAIpdzdLQtw">GAN-2</a></i></td></tr>
+                                <td><i><a href="https://pan.baidu.com/s/1yTTFrQahqWdaAIpdzdLQtw">1.Learned Deformation Stability in Convolutional Neural Networks <br> 2.deformable gan汇报 <br> 3.ppgn</a></i></td></tr>
                                 <tr>
                                 <td><p> Wednesday, 16 May 2018, 19:00 </p></td>
                                 <td><small>Weibo Zhang(张卫博)</small></td>
@@ -94,7 +122,7 @@ var _hmt = _hmt || [];
                                 <tr>
                                 <td><p> Sunday, 13 May 2018, 19:30 </p></td>
                                 <td><small>Ruihe Qian(钱瑞和)</small></td>
-                                <td><i><a href="  ">1.MoNet: Deep Motion Exploitation for Video Object Segmentation<br>2.Human Pose Estimation with Parsing Induced Learner</a></i></td></tr>
+                                <td><i><a href="https://pan.baidu.com/s/1Y-_zBl7w1sp-9SNUysAtvw">1.MoNet: Deep Motion Exploitation for Video Object Segmentation<br>2.Human Pose Estimation with Parsing Induced Learner</a></i></td></tr>
                                 <tr>
                                 <td><p> Saturday, 9 May 2018, 19:00 </p></td>
                                 <td><small>Han Yu(庾涵)</small></td>
@@ -126,7 +154,7 @@ var _hmt = _hmt || [];
                                 <tr>
                                 <td><p> Thursday, 5 May 2018, 19:00 </p></td>
                                 <td><small>Defa Zhu(朱德发)</small></td>
-                                <td><i><a href="https://pan.baidu.com/s/1pHaDXg9IuhHizJo4051rIw">GAN-1</a></i></td></tr>
+                                <td><i><a href="https://pan.baidu.com/s/1pHaDXg9IuhHizJo4051rIw">1.Recovering Realistic Texture in Image Super-resolution by Deep Spatial Feature Transform<br>2.Fader Networks Manipulating Images by Sliding Attributes <br>3.adabn</a></i></td></tr>
                                 <tr>
                                 <td><p> Wednesday, 2 May 2018, 19:00 </p></td>
                                 <td><small>Defa Zhu(朱德发) </small></td>
