--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,26 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞) Fan Tang(唐凡)-->
                                 <tr>
+                                <td><p> Saturday, 2 June 2018, 14:00 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1Br8Yf6OKfyGcNwj5hBMcVA">对抗样本攻防介绍</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 2 June 2018, 14:00 </p></td>
+                                <td><small>Weibo Zhang(张卫博)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1_vQNz5OKCI69Xw44Mk2YRw">竞赛简介</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 30 May 2018, 19:00 </p></td>
+                                <td><small>Weibo Zhang(张卫博)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1GEaZ9EfwEZqcVZp0yX-usQ">边缘计算</a></i></td></tr>
+                                <tr>
+                                <td><p> Sunday, 27 May 2018, 19:00 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1rZrAvtjHHLH-mRQ9EtAB_Q">1.PGPose<br>2.Deep Video Portraits</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 26 May 2018, 14:00 </p></td>
+                                <td><small>Wei Wang(王暐)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1Ck9Q11Z2wg4N0czJu3I6BA">1.Human Semantic Parsing for Person Re-identifcation<br>VITAL: VIsual Tracking via Adversarial Learning</a></i></td></tr>
+                                <tr>
                                 <td><p> Sunday, 27 May 2018, 19:00 </p></td>
                                 <td><small>Defa Zhu(朱德发)</small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1rZrAvtjHHLH-mRQ9EtAB_Q">1.PGPose<br>2.Deep Video Portraits</a></i></td></tr>
