--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,26 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞) Fan Tang(唐凡)-->
                                 <tr>
+                                <td><p> Wednesday, 13 June 2018, 19:00 </p></td>
+                                <td><small>Fan Tang(唐凡)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1pk4ptDz_IYzhm4TOd7GzsQ">黑光相机</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 13 June 2018, 19:00 </p></td>
+                                <td><small>Chen Gao(高晨)</small></td>
+                                <td><i><a href="   ">1、Vision Meets Drones: A Challenge<br>2、BDD100K: A Diverse Driving Video Database with Scalable Annotation Tooling</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 13 June 2018, 19:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/12Z9mFd_TdxGPqy5cg-QcrA">Interpretable R-CNN</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 13 June 2018, 19:00 </p></td>
+                                <td><small>Han Yu(庾涵)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1G8uLOgYJ_1RxmrA5N1-zeQ">Learning to Detect Multiple Photographic Defects</a></i></td></tr>
+                                <tr>
+                                <td><p> Tuesday, 12 June 2018, 19:30 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1sAiEJeK-6u8LZaVACNAQCg">1.Explaining and Harnessing Adversarial Examples<br>2.Self-Attention Generative Adversarial Networks</a></i></td></tr>
+                                <tr>
                                 <td><p> Saturday, 2 June 2018, 14:00 </p></td>
                                 <td><small>Defa Zhu(朱德发)</small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1Br8Yf6OKfyGcNwj5hBMcVA">对抗样本攻防介绍</a></i></td></tr>
