--- a/seminar.html
+++ b/seminar.html
@@ -78,7 +78,15 @@ var _hmt = _hmt || [];
                                   <td><strong>Speakers</strong></td>
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
-                                <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞) Fan Tang(唐凡)-->
+                                <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞) Fan Tang(唐凡) Weibo Zhang(张卫博)-->
+                                <tr>
+                                <td><p> Saturday, 16 June 2018, 19:00 </p></td>
+                                <td><small>Weibo Zhang(张卫博)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1PcBNPx11YedGQwdR4qw3mg">several proferssors</a></i></td></tr>
+                                <tr>
+                                <td><p> Saturday, 16 June 2018, 19:00 </p></td>
+                                <td><small>Tianrui Hui(惠天瑞)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/175n8zIc_4mpmb4IRLwsmdg">1.CityPersons: A Diverse Dataset for Pedestrian Detection<br>2.The EuroCity Persons Dataset: A Novel Benchmark for Object Detection</a></i></td></tr>
                                 <tr>
                                 <td><p> Wednesday, 13 June 2018, 19:00 </p></td>
                                 <td><small>Fan Tang(唐凡)</small></td>
@@ -86,7 +94,7 @@ var _hmt = _hmt || [];
                                 <tr>
                                 <td><p> Wednesday, 13 June 2018, 19:00 </p></td>
                                 <td><small>Chen Gao(高晨)</small></td>
-                                <td><i><a href="   ">1、Vision Meets Drones: A Challenge<br>2、BDD100K: A Diverse Driving Video Database with Scalable Annotation Tooling</a></i></td></tr>
+                                <td><i><a href="https://pan.baidu.com/s/10DJVRJMdgcS5SzsgyGPZlg">1、Vision Meets Drones: A Challenge<br>2、BDD100K: A Diverse Driving Video Database with Scalable Annotation Tooling</a></i></td></tr>
                                 <tr>
                                 <td><p> Wednesday, 13 June 2018, 19:00 </p></td>
                                 <td><small>Xiaofan Cai(蔡晓帆)</small></td>
