--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,27 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞) Fan Tang(唐凡) Weibo Zhang(张卫博)-->
                                 <tr>
+                                <td><p> Wednesday, 20 June 2018, 19:00 </p></td>
+                                <td><small>Ruihe Qian(钱瑞和)</small></td>
+                                <td><i><a href="   ">1.Generalizing to Unseen Domains
+via Adversarial Data Augmentation<br>2.A-Fast-RCNN: Hard Positive Generation via Adversary for Object Detection</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 20 June 2018, 19:00 </p></td>
+                                <td><small>Han Yu(庾涵)</small></td>
+                                <td><i><a href="   ">Towards Perceptual Image Dehazing by Physics-based Disentanglement and Adversarial Training</a></i></td></tr>
+                                <tr>
+                                <td><p> Wednesday, 20 June 2018, 19:00 </p></td>
+                                <td><small>Xiaofan Cai(蔡晓帆)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/16lk7VbmDby9aHNZJfor3og">Learning Transferable Architectures for Scalable Image Recognition （NasNet）</a></i></td></tr>
+                                <tr>
+                                <td><p> Monday, 18 June 2018, 19:00 </p></td>
+                                <td><small>Renda Bao(包仁达)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1haBrFjvEAc9NIv6MOlNZQw">1.Dual Conditional GANs for Face Aging and Rejuvenation<br>2.UV-GAN Adversarial Facial UV Map Completion for Pose-invariant Face Recognition</a></i></td></tr>
+                                <tr>
+                                <td><p> Monday, 18 June 2018, 19:00 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1haBrFjvEAc9NIv6MOlNZQw">deep video portraits</a></i></td></tr>
+                                <tr>
                                 <td><p> Saturday, 16 June 2018, 19:00 </p></td>
                                 <td><small>Weibo Zhang(张卫博)</small></td>
                                 <td><i><a href="https://pan.baidu.com/s/1PcBNPx11YedGQwdR4qw3mg">several proferssors</a></i></td></tr>
