--- a/seminar.html
+++ b/seminar.html
@@ -80,6 +80,10 @@ var _hmt = _hmt || [];
                                 </tr>
                                 <!--Lejian Ren(任乐健) Xiaofan Cai(蔡晓帆) Tianrui Hui(惠天瑞) Han Yu(庾涵) Chen Gao(高晨) Renda Bao(包仁达) Ruihe Qian(钱瑞和) Guanghui Ren(任广辉) Defa Zhu(朱德发) Yue Liao(廖越) Shaofei Huang(黄少飞) Fan Tang(唐凡) Weibo Zhang(张卫博)-->
                                 <tr>
+                                <td><p> Friday, 29 June 2018, 19:00 </p></td>
+                                <td><small>Defa Zhu(朱德发)</small></td>
+                                <td><i><a href="https://pan.baidu.com/s/1NJtCNdO1OFCmuYyF8frebg">Relation Networks for Object Detection</a></i></td></tr>
+                                <tr>
                                 <td><p> Wednesday, 20 June 2018, 19:00 </p></td>
                                 <td><small>Ruihe Qian(钱瑞和)</small></td>
                                 <td><i><a href="   ">1.Generalizing to Unseen Domains
