--- a/contacts.html
+++ b/contacts.html
@@ -74,19 +74,10 @@ var _hmt = _hmt || [];
                               <table width="600" border="2" class=" table-contact ">
   <tbody>
     <tr>
-      <td> S-Lab</td>
+      <td>No. 37 Xueyuan Road, Haidian District, Beijing, P.R. China(100083)</td>
     </tr>
     <tr>
-      <td>Road No. 89;</td>
-    </tr>
-    <tr>
-      <td>Beijing city Haidian District minzhuang ;</td>
-    </tr>
-    <tr>
-      <td>China (100864)</td>
-    </tr>
-    <tr>
-      <td>北京市海淀区闵庄路甲89号(100864)</td>
+      <td>北京市海淀区学院路37号北京航空航天大学(100864)</td>
     </tr>
   </tbody>
 </table>
@@ -96,7 +87,7 @@ var _hmt = _hmt || [];
                               <center><table width="600" border="2" class=" table-contact ">
   <tbody>
     <tr>
-      <td> Email: liusi@iie.ac.cn</td>
+      <td> Email: liusi@buaa.edu.cn</td>
     </tr>
 
   </tbody>
