--- a/people.html
+++ b/people.html
@@ -100,7 +100,7 @@ var _hmt = _hmt || [];
       <td> &nbsp; &nbsp; &bull; Head of S-Lab</td>
     </tr>
    <tr>
-      <td> &nbsp; &nbsp; &bull; Associate Professor(IIE, CAS)</td>
+      <td> &nbsp; &nbsp; &bull; Associate Professor(BUAA)</td>
     </tr>
    <tr>
       <td> &nbsp; &nbsp;  &bull; Research Direction:</td>
@@ -118,7 +118,7 @@ var _hmt = _hmt || [];
       <td> &nbsp; &nbsp;  &nbsp;  Image Retrieval</td>
     </tr>
      <tr>
-      <td> &nbsp; &nbsp;  &bull; Email: liusi@iie.ac.cn</td>
+      <td> &nbsp; &nbsp;  &bull; Email: liusi@buaa.edu.cn</td>
     </tr> </tbody>
 </table>
 
